fix images on smaller screens

--- a/src/app/pages/blog/posts/i-like-music-2025/i-like-music-2025.component.scss
+++ b/src/app/pages/blog/posts/i-like-music-2025/i-like-music-2025.component.scss
@@ -30,7 +30,9 @@ q {
 #preview-img {
   margin-top: 1rem;
   max-width: 40rem;
+  max-height: 20rem;
   width: 100%;
+  height: 100%;
   border: 1px solid var(--ctp-subtext0);
   border-radius: var(--radius-lg);
 }
